src/test/error/access1.lns
{
   class Hoge {
      pub fn func() mut {
      }
      pub fn func2() mut {
      }
   }
   let mut hoge = new Hoge();

   hoge.func = fn () {}; // error
   hoge.func = hoge.func2; // error
}

class Super {
   pri let val1: int {pub};
   pro let val2: int;
   pub let val3: int;

   pri fn func1() {
   }
   pro fn func2() {
   }
   pub fn func3() {
   }
}

class Sub extend Super {
   pub fn __init() {
      super( 1, 2, 3 );
   }
   pub fn test() {
      self.$val1 = 1; // error
      self.func3();
      self.func2();
      self.func1(); // error
   }
}
